Fix for ms-users with JWT authentication